--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=springio25-demo
-spring.main.web-application-type=none
+spring.profiles.active=secrets
 
 github.org=spring-projects
 github.repo=spring-framework
@@ -7,3 +7,5 @@ github.repo=spring-framework
 logging.level.root=WARN
 logging.level.demo=INFO
 logging.pattern.console=%clr(%c{1}){cyan} : %m%n
+
+spring.security.oauth2.client.registration.github.scope=user:email
