--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,6 @@ spring.main.web-application-type=none
 github.org=spring-projects
 github.repo=spring-framework
 
+logging.level.root=WARN
 logging.level.demo=INFO
+logging.pattern.console=%clr(%c{1}){cyan} : %m%n
